syntax = "proto3";

package test;


service Test {
  rpc Test (TestRequest) returns (TestResponse);
  rpc Throw (TestRequest) returns (TestResponse);
  rpc NotImplemented (TestRequest) returns (TestResponse);
  rpc NotFound (TestRequest) returns (TestResponse);
}

service Stream {
  rpc BiStream (stream TestRequest) returns (stream TestResponse);
  rpc ResponseStream (TestRequest) returns (stream TestResponse);
  rpc RequestStream (stream TestRequest) returns (TestResponse);
}

message TestRequest {
  string value = 1;
}
message TestResponse {
  string result = 1;
}

message TestEvent {
  string value = 1;
  int32 count = 2;
};

message ExtendMe {
  int32 bar = 126;
}
